css/bundle.css
/* ... */
input::placeholder,
textarea::placeholder {
  opacity: 1; /* 1 */
  color: #9ca3af; /* 2 */
}
/*
Set the default cursor for buttons.
*/
button,
[role="button"] {
  cursor: pointer;
}
/*
Make sure disabled buttons don't get the pointer cursor.
*/
:disabled {
  cursor: default;
}
/*
1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
   This can trigger a poorly considered lint error in some tools but is included by design.
*/
img,
svg,
video,
canvas,
audio,
iframe,
embed,
object {
  display: block; /* 1 */
  vertical-align: middle; /* 2 */
}
/*
Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
*/
img,
video {
  max-width: 100%;
  height: auto;
}
/* Make elements with the HTML hidden attribute stay hidden by default */
[hidden] {
  display: none;
}
*, ::before, ::after{
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x:  ;
  --tw-pan-y:  ;
  --tw-pinch-zoom:  ;
  --tw-scroll-snap-strictness: proximity;
  --tw-ordinal:  ;
  --tw-slashed-zero:  ;
  --tw-numeric-figure:  ;
  --tw-numeric-spacing:  ;
  --tw-numeric-fraction:  ;
  --tw-ring-inset:  ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgb(59 130 246 / 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur:  ;
  --tw-brightness:  ;
  --tw-contrast:  ;
  --tw-grayscale:  ;
  --tw-hue-rotate:  ;
  --tw-invert:  ;
  --tw-saturate:  ;
  --tw-sepia:  ;
  --tw-drop-shadow:  ;
  --tw-backdrop-blur:  ;
  --tw-backdrop-brightness:  ;
  --tw-backdrop-contrast:  ;
  --tw-backdrop-grayscale:  ;
  --tw-backdrop-hue-rotate:  ;
  --tw-backdrop-invert:  ;
  --tw-backdrop-opacity:  ;
  --tw-backdrop-saturate:  ;
  --tw-backdrop-sepia:  ;
}
::backdrop{
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x:  ;
  --tw-pan-y:  ;
  --tw-pinch-zoom:  ;
  --tw-scroll-snap-strictness: proximity;
  --tw-ordinal:  ;
  --tw-slashed-zero:  ;
  --tw-numeric-figure:  ;
  --tw-numeric-spacing:  ;
  --tw-numeric-fraction:  ;
  --tw-ring-inset:  ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgb(59 130 246 / 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur:  ;
  --tw-brightness:  ;
  --tw-contrast:  ;
  --tw-grayscale:  ;
  --tw-hue-rotate:  ;
  --tw-invert:  ;
  --tw-saturate:  ;
  --tw-sepia:  ;
  --tw-drop-shadow:  ;
  --tw-backdrop-blur:  ;
  --tw-backdrop-brightness:  ;
  --tw-backdrop-contrast:  ;
  --tw-backdrop-grayscale:  ;
  --tw-backdrop-hue-rotate:  ;
  --tw-backdrop-invert:  ;
  --tw-backdrop-opacity:  ;
  --tw-backdrop-saturate:  ;
  --tw-backdrop-sepia:  ;
}
.float-right{
  float: right;
}
.float-left{
  float: left;
}
.mx-auto{
  margin-left: auto;
  margin-right: auto;
}
.block{
  display: block;
}
.inline-flex{
  display: inline-flex;
}
.grow{
  flex-grow: 1;
}
.px-8{
  padding-left: 2rem;
  padding-right: 2rem;
}
.capitalize{
  text-transform: capitalize;
}
#site-header{
  position: fixed;
  top: 0px;
  z-index: 40;
  width: 100%;
  height: 36px;
  background-color: #4f4f4f;
  border-bottom: 3px solid orange;
}
#site-header div.content{
  width: 100%;
}
@media (min-width: 640px){
  #site-header div.content{
    max-width: 640px;
  }
}
@media (min-width: 976px){
  #site-header div.content{
    max-width: 976px;
  }
}
@media (min-width: 1280px){
  #site-header div.content{
    max-width: 1280px;
  }
}
#site-header div.content{
  margin-left: auto;
  margin-right: auto;
}
@media (min-width: 976px){
  #site-header div.content{
    border-bottom-right-radius: 0.5rem;
    border-bottom-left-radius: 0.5rem;
  }
}
#site-header div.content {
  height: 45px;
  box-shadow: 0 2px 5px orange;
  background-color: inherit;
  max-width: calc(900px - (1.2rem * 2));
  padding-right: 2.4rem;
  padding-left: 2.4rem;
}
#site-header div.content > a{
  float: left;
  font-size: 1.25rem;
  line-height: 1.75rem;
}
@media (min-width: 976px){
  #site-header div.content > a{
    font-size: 1.5rem;
    line-height: 2rem;
  }
}
@media (min-width: 1280px){
  #site-header div.content > a{
    font-size: 3rem;
    line-height: 1;
  }
}
#site-header div.content > a {
  text-shadow: 1px 1px 9px #000;
  line-height: 36px;
  color: #cfcfcf;
}
#site-header div.content nav{
  float: right;
}
#site-header div.content nav a{
  font-size: 0.75rem;
  line-height: 1rem;
}
@media (min-width: 976px){
  #site-header div.content nav a{
    font-size: 1.5rem;
    line-height: 2rem;
  }
}
#site-header div.content nav a {
  color: #cfcfcf;
  line-height: 36px;
  font-weight: 800;
  text-shadow: 1px 2px 3px #000;
}
#site-header div.content nav a:not(:first-child) {
  margin-left: 20px;
}

#main-wrapper{
  width: 100%;
}

@media (min-width: 640px){
  #main-wrapper{
    max-width: 640px;
  }
}

@media (min-width: 976px){
  #main-wrapper{
    max-width: 976px;
  }
}

@media (min-width: 1280px){
  #main-wrapper{
    max-width: 1280px;
  }
}

@media (min-width: 976px){
  #main-wrapper{
    margin-left: auto;
    margin-right: auto;
  }
}

#site-footer{
  position: fixed;
  bottom: 0px;
  z-index: 50;
  background-color: #f9f9f9;
  width: 100%;
  height: 36px;
  border-top: 1px solid #cfcfcf;
  padding: 0 10px 0 10px;
}
#site-footer .social-media-list {
  list-style: none;
}
/* ... */

